Migrate code to Java 17.